tests/invalid/parameter_pack_export_requires_instantiate.wio
@Export
fn MissingPackInstantiation<Args...>(args: Args...) -> i32 {
    return args.size fit i32;
}
